# msdp_device_status

./: BUILD.gn  Cargo.toml  Makefile  OAT.xml  README_zh.md  bundle.json  check_libdinput_sdk.py  code-review.csv  code_review.xlsx  convert.py  device_status.gni  fix_pointer_down.md  hisysevent.yaml  ipc_blocklist.txt  motion.gni  主要优化项.md
conf/: rootcert-fx.pem
frameworks/js/napi/: BUILD.gn
frameworks/js/napi/include/: device_status_callback_stub.h  device_status_event.h  device_status_napi.h  devicestatus_callback_stub.h  devicestatus_event.h  devicestatus_napi.h  devicestatus_napi_error.h  motion_event.h  motion_napi.h
frameworks/js/napi/interaction/: BUILD.gn
frameworks/js/napi/interaction/cooperate/: BUILD.gn
frameworks/js/napi/interaction/coordination/: BUILD.gn
frameworks/js/napi/src/: device_status_callback_stub.cpp  device_status_event.cpp  device_status_napi.cpp  devicestatus_callback_stub.cpp  devicestatus_event.cpp  devicestatus_napi.cpp  devicestatus_napi_error.cpp  motion_event.cpp  motion_napi.cpp
frameworks/preview/: BUILD.gn
frameworks/preview/include/: drag_preview.h
frameworks/preview/src/: drag_preview.cpp
generatingLib/paho.mqtt.c-1.3.9/: BUILD.gn
generatingLib/paho.mqtt.c-1.3.9/src/: Clients.c  Log.c  MQTTAsync.c  VersionInfo.h  WebSocket.c
intention/adapters/test/unittest/: BUILD.gn
libs/: .BUILD.gn.swn  .BUILD.gn.swo  .BUILD.gn.swp  BUILD.gn
libs/include/: data_define.h  devicestatus_algorithm_manager.h  devicestatus_data_define.h  devicestatus_data_parse.h  devicestatus_msdp_mock.h  devicestatus_msdp_rdb.h  devicestatus_sensor_mock.h  devicestatus_sensor_rdb.h  motion_data_define.h  motion_data_parse.h  motion_gesture_manager.h  motion_msdp_mock.h  motion_sensor_mock.h
libs/include/algorithm/: algo_absolute_still.h  algo_base.h  algo_horizontal.h  algo_vertical.h  device_status_absolute_still.h  device_status_algo_base.h  device_status_horizontal.h  device_status_vertical.h  motion_flip.h  motion_gesture.h  motion_near_ear.h  motion_pickup.h  motion_pocket.h  motion_rotate.h  motion_shake.h
libs/include/datahub/: point_event_callback.h  sensor_data_callback.h
libs/interface/: devicestatus_algorithm_manager_interface.h  devicestatus_msdp_interface.h  devicestatus_sensor_interface.h
libs/plugin/include/: plugin_manager.h
libs/plugin/src/: plugin_manager.cpp
libs/src/: devicestatus_algorithm_manager.cpp  devicestatus_data_parse.cpp  devicestatus_msdp_mock.cpp  devicestatus_msdp_rdb.cpp  devicestatus_sensor_mock.cpp  devicestatus_sensor_rdb.cpp  motion_data_parse.cpp  motion_gesture_manager.cpp  motion_msdp_mock.cpp  motion_sensor_mock.cpp
libs/src/algorithm/: algo_absolute_still.cpp  algo_base.cpp  algo_horizontal.cpp  algo_vertical.cpp  device_status_absolute_still.cpp  device_status_algo_base.cpp  device_status_horizontal.cpp  device_status_vertical.cpp  motion_flip.cpp  motion_gesture.cpp  motion_near_ear.cpp  motion_pickup.cpp  motion_pocket.cpp  motion_rotate.cpp  motion_shake.cpp
libs/src/datahub/: point_event_callback.cpp  sensor_data_callback.cpp
libs/test/: BUILD.gn
libs/test/src/: devicestatus_agent_test.cpp  devicestatus_client_test.cpp  devicestatus_module_test.cpp  devicestatus_service_test.cpp
libs/test/unittest/: BUILD.gn
libs/test/unittest/include/: device_status_algorithm_test.h  device_status_datahub_test.h
libs/test/unittest/src/: device_status_algorithm_test.cpp  device_status_datahub_test.cpp  device_status_dataparse_test.cpp  device_status_mock_test.cpp  device_status_msdp_mock_test.cpp
motion_libs/: BUILD.gn
motion_libs/include/: motion_data_define.h  motion_data_utils.h  motion_gesture_manager.h
motion_libs/include/algorithm/: motion_flip.h  motion_gesture.h  motion_near_ear.h  motion_pickup.h  motion_pocket.h  motion_rotate.h  motion_shake.h
motion_libs/include/datahub/: point_event_callback.h  sensor_data_callback.h
motion_libs/interface/: motion_msdp_interface.h  motion_sensor_interface.h
motion_libs/src/: motion_gesture_manager.cpp
motion_libs/src/algorithm/: motion_flip.cpp  motion_gesture.cpp  motion_near_ear.cpp  motion_pickup.cpp  motion_pocket.cpp  motion_rotate.cpp  motion_shake.cpp
motion_libs/src/datahub/: point_event_callback.cpp  sensor_data_callback.cpp
rust/base_event/binding/: BUILD.gn
rust/base_event/binding/src/: binding.rs  cextra_data.rs  error.rs  lib.rs
rust/base_event/sys/: BUILD.gn
rust/base_event/sys/include/: c_base_event.h  c_base_event_internal.h
rust/base_event/sys/source/: c_base_event.cpp
rust/ipc/socket/: BUILD.gn
rust/ipc/socket/src/: epoll_manager.rs  lib.rs  stream_buffer.rs  stream_session.rs
rust/ipc/socket/test/: main.rs
rust/subsystem/dinput/test/: BUILD.gn
rust/subsystem/distributed_input_adapter/binding/: BUILD.gn
rust/utils/socket_ipc_rust_ffi/: BUILD.gn
rust/utils/socket_ipc_rust_ffi/src/: stream_buffer.rs  stream_socket.rs
rust/utils/socket_ipc_rust_ffi/test/: main.rs
services/device_manager/: BUILD.gn
services/device_manager/include/: device.h  device_manager.h
services/device_manager/src/: device.cpp  device_manager.cpp  enumerator.cpp  monitor.cpp
services/distributed_input/: BUILD.gn
services/distributed_input/include/: distributed_input_kit.h  i_start_stop_d_inputs_call_back.h  prepare_d_input_call_back_stub.h  simulation_event_listener_stub.h  start_d_input_call_back_stub.h  start_stop_d_inputs_call_back_stub.h  start_stop_result_call_back_stub.h  stop_d_input_call_back_stub.h  unprepare_d_input_call_back_stub.h
services/interaction/continue_mission/: BUILD.gn
services/interaction/continue_mission/include/: continue_mission_callback.h  continue_mission_callback_proxy.h  continue_mission_callback_stub.h  continue_mission_param.h  i_continue_mission_callback.h
services/interaction/continue_mission/src/: continue_mission_callback.cpp  continue_mission_callback_proxy.cpp  continue_mission_callback_stub.cpp
test/fuzztest/devicestatusevent_fuzzer/: BUILD.gn  devicestatusevent_fuzzer.cpp  devicestatusevent_fuzzer.h
tools/vdev/test/unittest/: BUILD.gn  vdevadm_test.cpp
(+769 files in other folders)
