# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
members = [
    # IPC
    "rust/data/sys",
    "rust/frameworks/client",

    "rust/ipc/client",
    "rust/ipc/server",
    "rust/ipc/service",

    "rust/modules/basic/client",
    "rust/modules/basic/server",

    "rust/modules/coordination/client",
    "rust/modules/coordination/server",

    "rust/modules/drag/client",
    "rust/modules/drag/server",

    "rust/plugin_manager",

    "rust/utils",

    # NO IPC
    "rust/modules/scheduler/sys",
    "rust/services/sys",
    "rust/subsystem/device_profile/sys",
    "rust/subsystem/distributed_hardware/sys",
    "rust/subsystem/dsoftbus/sys",
    "rust/subsystem/input/sys",
]
